# shopping-concierge

./: .env.example  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  test.yml
deployment/: deploy.py
eval/: __init__.py  test_eval.py
shopping_concierge/: __init__.py  agent.py  prompt.py
shopping_concierge/tools/: __init__.py
tests/: __init__.py  test_agent.py
tests/integration/: __init__.py  test_agent_evaluation.py
tests/integration/fixture/: shopping_concierge_basic.test.json
